add module information and run modifications